// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/GlobalSetting/UrlAddressPrefixTips render snap when field show 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            URL地址前缀
          </div>
          <div
            class="tips"
          >
            配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-spin-container"
            >
              <span
                class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
              >
                <span
                  class="ant-input-wrapper ant-input-group css-dev-only-do-not-override-ywkr0o"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-ywkr0o"
                    id="editInput"
                    placeholder="请输入{{name}}"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-group-addon"
                  >
                    <svg
                      class="custom-icon custom-icon-selected"
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="selected"
                      >
                        <path
                          d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                          id="Vector"
                          stroke="#4583FF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/GlobalSetting/UrlAddressPrefixTips render snap when has url 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            URL地址前缀
          </div>
          <div
            class="tips"
          >
            配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          1
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
            hidden=""
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/GlobalSetting/UrlAddressPrefixTips render snap when no url 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            URL地址前缀
          </div>
          <div
            class="tips"
          >
            配置能访问SQLE的url地址信息, 格式为 http(s)://ip:port/sqle 
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          -
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
            hidden=""
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
